Add uploading, viewing and searching videos

--- a/config.json
+++ b/config.json
@@ -9,8 +9,10 @@
     "MAX_CONTENT_LENGTH": 5242880,
     "HANDLE_MAX_LENGTH": 12,
     "HANDLE_MIN_LENGTH": 3,
-    "NICKNAME_MAX_LENGTH": 12,
+    "NICKNAME_MAX_LENGTH": 25,
     "NICKNAME_MIN_LENGTH": 1,
     "BIO_MAX_LENGTH": 100,
-    "MAX_IMAGE_SIZE": 204800
+    "MAX_IMAGE_SIZE": 204800,
+    "VIDEO_TITLE_MIN_LENGTH": 2,
+    "VIDEO_TITLE_MAX_LENGTH": 50
 }
