Add default avatars for users

--- a/config.json
+++ b/config.json
@@ -14,5 +14,6 @@
     "MAX_IMAGE_SIZE": 204800,
     "VIDEO_TITLE_MIN_LENGTH": 2,
     "VIDEO_TITLE_MAX_LENGTH": 50,
-    "COMMENT_MAX_LENGTH": 250
+    "COMMENT_MAX_LENGTH": 250,
+    "DEFAULT_AVATAR_SIZE": 8
 }
