Implement editing videos

--- a/config.json
+++ b/config.json
@@ -14,6 +14,7 @@
     "MAX_IMAGE_SIZE": 204800,
     "VIDEO_TITLE_MIN_LENGTH": 2,
     "VIDEO_TITLE_MAX_LENGTH": 50,
+    "VIDEO_DESC_MAX_LENGTH": 500,
     "COMMENT_MAX_LENGTH": 250,
     "DEFAULT_AVATAR_SIZE": 8
 }
